# bull-stake

./: .dockerignore  .gitignore  Anchor.toml  Dockerfile  HANDOFF.md  README.md  node_modules  package-lock.json  package.json  start-prod.mjs  tsconfig.json
.claude/: launch.json
docs/: HACKATHON.md  SUBMISSION-PITCH.md  VIDEO-SCRIPT.md  secondary-prediction-market.md  settle-claim-runbook.md  spike-runbook.md
engine/: .env.example  DEMO.md  node_modules  package-lock.json  package.json  tsconfig.json  vitest.config.ts
keeper/: .env.example  contest.ts  create-contest.ts  create-daily-card.ts  create-daily-pearly.ts  create-match-pool.ts  create-parlay.ts  create-test-sweep.ts  cron.ts  demo-both.ts  init-jackpot.ts  init-vault.ts  lines-rules.ts  lines.ts  list-slate.ts  live-feed.ts  live-pda.ts  live-runner.ts  node_modules  package-lock.json  package.json  run-test-match.ts  schedule-pools.ts  settle-all.ts  settle-contest.ts  settle.ts  test-feed.ts  tsconfig.json  verify-3way.ts  void-contest.ts  void-live-pool.ts
mockups/: 1-jackpot.html  10-live-streak-playable.html  11-live-chips.html  12-pool-card.html  13-live-pot.html  14-beat-the-market.html  15-roar-demo.html  15-trade-the-line.html  16-gauntlet.html  17-pearly.html  18-sporty-signal-card.html  19-stats-variants.html  2-no-loss.html  20-app-tour.html  21-live-microfeed-tryout.html  21-live-v2-bank-or-ride.html  22-live-bank-ride.html  23-live-mascot.html  24-live-handdrawn.html  24b-live-handdrawn-dark.html  25-streak-unified.html  26-semifinal-one-match-card.html  27-bull-machine-3d.html  27b-bull-machine-9.html  27c-bull-machine-3d-drums.html  27d-bull-machine-webgl.html  3-streak.html  4-daily.html  5-daily-live.html  6-pre-game.html  7-after-game.html  8-pre-blank.html  9-live-streak.html
programs/proofbet/: Cargo.toml
programs/proofbet/src/: contest_state.rs  errors.rs  events.rs  lib.rs  live_state.rs  state.rs
programs/proofbet/src/instructions/: claim.rs  claim_contest.rs  create_contest.rs  enter.rs  initialize_jackpot.rs  initialize_market.rs  initialize_vault.rs  mod.rs  place_bet.rs  settle.rs  settle_contest.rs  void_contest.rs  void_market.rs
programs/proofbet/src/instructions/live/: claim_live_pool.rs  commit_live.rs  create_live_pool.rs  delegate_live.rs  end_live_pool.rs  join_live_pool.rs  lock_pick.rs  mod.rs  open_call.rs  prealloc_call.rs  refund_voided.rs  resolve_call.rs  score_entry.rs  settle_live_pool.rs  void_live_pool.rs
scripts/: crons.sh
spike/: .env.example  README.md  node_modules  package-lock.json  package.json  tsconfig.json
spike/live-er/: Cargo.toml  proof-report.json  proof.ts
spike/live-er/src/: lib.rs
spike/session-keys/: Cargo.toml  proof-report.json
spike/session-keys/src/: lib.rs
tests/: claim.ts  conservation.ts  contest_claim.ts  contest_create.ts  contest_enter.ts  contest_helpers.ts  contest_jackpot.ts  contest_jackpot_rollover.ts  contest_lifecycle.ts  contest_pearly.ts  helpers.ts  (+17 more)
(+177 files in other folders)
