[package]
name = "proofbet"
version = "0.1.0"
description = "ProofBet parimutuel market for World Cup soccer props"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proofbet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
